--- a/client/src/components/custom-button/custom-button.styles.scss
+++ b/client/src/components/custom-button/custom-button.styles.scss
@@ -36,6 +36,11 @@
     background-color: transparent;
     color: inherit;
     border: thin solid;
+
+    &:hover {
+      color: var(--primary-100);
+      border-color: var(--primary-100);
+    }
   }
 
   &.inline {
