--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -6,16 +6,15 @@
   -webkit-backface-visibility: hidden;
   width: 100%;
   background: #fff;
+  z-index: 50;
 
   .nav-wrapper {
     height: var(--nav-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
     background: #fff;
     position: relative;
-    z-index: 3;
   }
 
   .logo-container {
@@ -30,6 +29,7 @@
     color: var(--primary-85);
     height: 30px;
     width: 130px;
+    pointer-events: none;
   }
 
   .nav-links {
@@ -148,14 +148,6 @@
       transition: transform 0.3s;
     }
   }
-  // .mobile-nav-leave {
-  //   transform: translateY(0%);
-
-  //   &.mobile-nav-leave-active {
-  //     transform: translateY(-100%);
-  //     transition: transform 0.3s;
-  //   }
-  // }
 }
 
 @media screen and (max-width: 800px) {
