--- a/client/src/components/modal-shell/modal-shell.styles.scss
+++ b/client/src/components/modal-shell/modal-shell.styles.scss
@@ -23,13 +23,13 @@
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     z-index: 100;
-    padding: 2rem;
+    padding: 2.25rem;
     max-width: 500px;
     margin: 0 auto;
     position: relative;
     display: inline-block;
     text-align: center;
-    border-radius: 2px;
+    border-radius: 0.375rem;
     top: 50%;
     transform: translateY(-50%);
   }
@@ -37,7 +37,7 @@
   .modal-button-container {
     display: flex;
     justify-content: center;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 
     .custom-button:not(:last-of-type) {
       margin-right: 1rem;
@@ -46,13 +46,14 @@
 
   h1 {
     margin-bottom: 0.75rem;
+    font-size: 2rem;
   }
 }
 
-// @media (max-width: 450px) {
-//   .modal-wrapper {
-//     .modal-box {
-//       padding: 1.5rem;
-//     }
-//   }
-// }
+@media (max-width: 450px) {
+  .modal-wrapper {
+    .modal-box {
+      padding: 2rem;
+    }
+  }
+}
